# paper_evaluator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
resource/: neurips_guidelines.txt  review_guidelines.txt
src/: __main__.py  evaluator.py  file_processor.py  improver.py  main.py  prompts.py
tests/: sample_paper.tex
