[project]
name = "paper_evaluator"
version = "0.1.0"
description = "LLM-based paper evaluation system"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "requests",
    "PyPDF2",
    "python-magic",
    "pyyaml",
]

[project.scripts]
paper_evaluator = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
]